samples/_failures_safe/1761700441_9357dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1116fd1.c: In function ‘main’:
./samples/SAFE/__tmp_a1116fd1.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("Error: No log entries found or file could not be read\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a1116fd1.c:149:9: error: expected declaration or statement at end of input
